--- a/src/main/webapp/css/info/competitiveness.css
+++ b/src/main/webapp/css/info/competitiveness.css
@@ -454,3 +454,257 @@ section {
 .section-text {
     line-height: 24px;
 }
+
+@media screen and (max-width: 1300px) {
+    .section03 .text .section-text {
+        width: 100%;
+        padding-right: 30px;
+    }
+    .section03 .text {
+        width: 50%;
+    }
+    .section03 .img-box {
+        width: 48%;
+        margin-left: 2%;
+        margin-right: 0 !important;
+    }
+    .section03 .max-layout-width {
+        padding-left: 30px;
+        padding-right: 30px;
+        box-sizing: border-box;
+    }
+    .section03 .full-layout-width {
+        margin-left: -2%;
+    }
+}
+
+@media screen and (max-width: 1208px) {
+    .section03 .img-box .img {
+        width: 100%
+    }
+    .section03 .image_box_right {
+        width: 100%;
+        top: 420px;
+        height: 370px;
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
+    .section03 .full-layout-width {
+        margin-top: 460px;
+        width: auto;
+        display: block;
+        overflow: hidden;
+    }
+    .section03 .text {
+        width: 100%;
+        box-sizing: border-box;
+    }
+    .section05 .text {
+        width: 40%;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .section02 .img02 {
+        width: 100%;
+        max-width: 50%;
+    }
+    .section02 .section-text {
+        width: 100%;
+        padding-right: 30px;
+        box-sizing: border-box;
+        word-break: keep-all;
+    }
+    .section02 .max-layout-width > div:first-child {
+        padding-left: 50px;
+    }
+    .section02 .section-title {
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .section05 {
+        padding-bottom: 50px;
+    }
+    .section05 .img02:after {
+        display: none;
+    }
+    .section05 .text {
+        width: 100%;
+        padding: 0 30px;
+        padding-top: 410px;
+        box-sizing: border-box;
+    }
+    .section05 .img01 {
+        width: 100%;
+        height: 316px;
+    }
+    .section05 .img02 {
+        left: 10px;
+        top: 80px;
+    }
+    .section04 .sub-text {
+        padding: 0 30px;
+        box-sizing: border-box;
+        word-break: keep-all;
+    }
+    .section04 .sub-text br {
+        display: none;
+    }
+    .section03 .image_box_right {
+        top: 380px;
+    }
+    .section03 {
+        margin-top: 300px;
+        padding-top: 70px;
+    }
+    .section02 .max-layout-width > div:first-child {
+        padding: 0 30px;
+    }
+    .section02 .img01 .img {
+        height: 390px;
+    }
+    .section02 .max-layout-width > div:first-child {
+        height: 1230px;
+    }
+    .section02 .default-background {
+        display: none;
+    }
+    .section02 .max-layout-width > div:first-child:before {
+        left: 30px;
+    }
+    .section02 .max-layout-width > div:first-child > .float-left:first-child {
+        float: none;
+        padding-left: 30px;
+        padding-right: 30px;
+        word-break: keep-all;
+    }
+    .section02 .section-title br {
+        display: none;
+    }
+    .section02 .img01 {
+        top: 200px;
+        width: 100%;
+        left: 0;
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
+    .section02 .img02 {
+        width: 100%;
+        max-width: 100%;
+        float: none;
+        height: 530px;
+        position: absolute;
+        top: 620px;
+        padding-right: 30px;
+        box-sizing: border-box;
+    }
+    .section02 .img02 .img {
+        height: auto;
+        overflow: hidden;
+        padding-right: 30px;
+        box-sizing: border-box;
+    }
+    .section02 .img02 .img img {
+        width: 100%;
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .section03 .image_box_right {
+        top: 470px;
+    }
+    .section01 .img01 {
+        width: 100%;
+        left: 0;
+        height: 337px;
+    }
+    .section01 .text h6 {
+        display: none;
+    }
+    .section01 .text {
+        padding-top: 400px
+    }
+    .section01 .section-title {
+        padding: 0 30px;
+    }
+    .section01 .text h6 + div:before {
+        left: 0;
+    }
+    .section01 .list{
+        margin-top: 30px;
+        padding: 0 30px;
+        background: none;
+    }
+    .list li {
+        width: 50%;
+        height: 50%;
+        box-sizing: border-box;
+        background: #9b8b7e;
+        display: block;
+    }
+    .list li:nth-child(2n)  {
+        border-left: 1px solid #c6c6c6;
+    }
+    .list li:nth-child(1), .list li:nth-child(2) {
+        border-bottom: 1px solid #c6c6c6;
+    }
+    .list ul {
+        overflow:hidden;
+        height: 411px;
+    }
+    .list li + li:after {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 534px) {
+    .section03 .full-layout-width {
+        margin-top: 442px;
+    }
+    .section03 .img-box span {
+        font-size: 15px;
+    }
+    .section03 .text .section-text {
+        font-size: 15px;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .list li:first-child {
+        border-top: none;
+    }
+    .list li {
+        width: 100%;
+        height: 211px;
+        border-left: none !important;
+        border-top: 1px solid #c6c6c6 !important;
+    }
+    .list ul {
+        height: auto;
+    }
+    .section02 .img01 {
+        top: 260px;
+    }
+    .section02 .img02 {
+        top: 680px;
+    }
+    .section03 .img-box {
+        width: 100%;
+        margin-left: 0;
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (max-width: 390px) {
+    .section03 .full-layout-width {
+        margin-top: 426px;
+        margin-left: 0;
+    }
+
+    .section03 .section-title {
+        font-size: 30px;
+    }
+}
