--- a/src/main/webapp/css/info/diagnosticEquipmentSystem.css
+++ b/src/main/webapp/css/info/diagnosticEquipmentSystem.css
@@ -106,7 +106,7 @@
     bottom: 0;
     z-index: 1;
     left: 0;
-    padding: 55px 0 0 36px;
+    padding: 57px 0 0 36px;
     box-sizing: border-box;
     color: #fff;
     letter-spacing: -1px;
@@ -364,3 +364,179 @@
     box-sizing: border-box;
 }
 
+@media screen and (max-width: 1300px) {
+    .section03 .title {
+        margin-left: 320px !important;
+    }
+    .section03 .title:before {
+        left: inherit;
+        right: 210px;
+    }
+    .section03 .max-layout-width {
+        padding-left: 0;
+    }
+    .section03 .max-layout-width > * {
+        padding-left: 50%;
+        margin-left: 230px;
+    }
+    .section03 .section-text:after {
+        right: 130px;
+        left: inherit;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .section01 .text-box {
+        width: 327px;
+        height: 170px;
+        padding: 29px 0 0 30px;
+    }
+
+    .section01 .pager {
+        right: 50px;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .section03 .max-layout-width {
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
+    .section03 .max-layout-width > * {
+        width: 100%;
+        padding-left: 0;
+        margin-left: 0;
+    }
+    .section03 .image_box_left {
+        top: 300px;
+    }
+    .section03 .section-text:after {
+        display: none;
+    }
+    .section03 .title {
+        margin-left: 75px !important
+    }
+    .section03 .title:before {
+        left: -75px;;
+    }
+    .section03 .section-title-color + br {
+        display: none;
+    }
+    .section03 .section-text {
+        width: 300px;
+        word-break: keep-all
+    }
+    .section03 .image_box_left {
+        margin-left: 30px;
+    }
+    .section03 .bg {
+        left: 0;
+        width: 100%;
+        height: 325px;
+    }
+    .section03 .img {
+        width: 91%;
+        margin: 0 30px;
+        box-sizing: border-box;
+        height: 325px;
+    }
+    .section03 {
+        padding-bottom: 500px;
+    }
+}
+
+@media screen and (max-width: 938px) {
+    .section01 .slider-container > div.slider-box {
+        width: 50%;
+    }
+
+    .section01 .text-box {
+        width: 250px;
+        height: 150px;
+        padding: 55px 0 0 36px;
+    }
+    .section01 .text-box h2 {
+        font-size: 22px;
+    }
+    .section01 .text-box p {
+        font-size: 17px;
+    }
+    .section01 .pager span.current {
+        font-size: 27px;
+    }
+    .section01 .pager span.max {
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 730px) {
+    .section01 .slider-container > div.slider-box {
+        width: 45%;
+    }
+}
+
+@media screen and (max-width: 640px) {
+
+    .section01 .slider, .section01 .slick-slider .slick-list {
+        width: 100%;
+        height: 452px;
+        overflow: initial;
+    }
+    .section01 .slider-container > div.slider-box {
+        width: 100%;
+        box-sizing: border-box;
+        padding-left: 0;
+        overflow: i;
+    }
+    .section01 .swiper-slide {
+        height: 452px;
+        width: 100%;
+        opacity: 1;
+    }
+    .section01 .text-box {
+        width: 92%;
+        left: 4%;
+        height: 215px;
+        bottom: -90px;
+    }
+    .section01 .pager {
+        bottom: 468px;
+        z-index: 100;
+    }
+    .section01 .text-box h2 {
+        font-size: 29px;
+    }
+    .section01 .text-box p {
+        font-size: 19px;
+    }
+    .section01 .pager span {
+        color: #fff;
+    }
+    .section01 .slider-pagenation {
+        margin-right: 0;
+        float: none !important;
+        margin-top: 590px;
+        padding-left: 4%;
+    }
+    .section01 .slick-dots {
+        padding-bottom: 25px;
+    }
+    .slick-dots li {
+        margin-left: 0;
+    }
+    .section01 .slick-slide {
+        width: 100%;
+    }
+    .section01 .slider {
+        overflow: hidden;
+    }
+}
+
+@media screen and (max-width: 640px)  {
+    .section03 .section-title-color + br {
+        display: block;
+    }
+    .section03 .image_box_left {
+        top: 330px;
+    }
+}
