--- a/src/main/webapp/css/info/directions.css
+++ b/src/main/webapp/css/info/directions.css
@@ -67,7 +67,7 @@
 
 .section03 .bg {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     background: url(../../images/sub/info/directions/location_bg.jpg) center top no-repeat fixed;
     padding-top: 115px;
     box-sizing: border-box;
@@ -174,4 +174,80 @@ li:before {
 
 .section02 .max-layout-width > div {
     text-align: left;
+}
+
+.mobile-location-bg {
+    display: none;
+}
+
+@media screen and (max-width: 1300px) {
+    .section04 .max-layout-width {
+        width: 100%;
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .section03 .bg {
+        padding-bottom: 75px;
+    }
+    .logo {
+        display: none;
+    }
+    .section04 li {
+        width: 100%;
+        border: none;
+        border-top: 1px solid #d4d4d4;;
+    }
+    .section04 ul {
+        border: 1px solid #d4d4d4;
+    }
+    .section04 li:first-child {
+        border: none;
+    }
+    .location-bg {
+        display: none;
+    }
+    .mobile-location-bg {
+        display: block;
+        margin-top: 50px;
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
+
+    .mobile-location-bg img {
+        width: 100%;
+    }
+    .section03 {
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    #map {
+        height: 530px;
+    }
+    .section04 .title {
+        padding-left: 74px;
+    }
+    .location {
+        float: none;
+    }
+    .section02 .max-layout-width > div {
+        display: block;
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
+    .location p {
+        line-height: 1.4;
+        word-break: keep-all;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .section04 li p {
+        font-size: 14px;
+        width: 90%;
+    }
 }
