--- a/src/main/webapp/lib/fade-slider/slider.css
+++ b/src/main/webapp/lib/fade-slider/slider.css
@@ -571,3 +571,75 @@
     padding-right: 20px;
     background: #9b8b7e url(../../images/sub/implant/cmmn/right_slider.png) no-repeat center;
 }
+
+@media screen and (max-width: 1300px) {
+    .fade-in-slider .swiper-container {
+        padding: 0 30px;
+    }
+    .fade-in-slider .image_box_right {
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 938px) {
+    .fade-in-slider .image_box_right {
+        width: 100%;
+        height: 324px;
+    }
+    .fade-in-slider .scroll-bar {
+        top: 470px;
+        width: 100%;
+        left: 30px;
+    }
+    section.fade-in-slider .swiper-slide .text {
+        width: 100%;
+        padding-top: 370px;
+    }
+    .fade-in-slider .swiper-container {
+        height: 740px;
+    }
+    .fade-in-slider .max-layout-width {
+        padding-bottom: 0;
+    }
+    .fade-in-slider .swiper-slide .text p {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    section.fade-in-slider .swiper-slide .text h2 {
+        font-size: 28px;
+    }
+    .fade-in-slider .swiper-slide .text p {
+        font-size: 15px;
+    }
+    .fade-in-slider .title h2 {
+        font-size: 31px;
+        padding: 0 30px;
+        box-sizing: border-box;
+        line-height: 1.3;
+        word-break: keep-all;
+    }
+    .fade-in-slider .title p {
+        font-size: 15px;
+        padding: 0 30px;
+        box-sizing: border-box;
+        line-height: 1.7;
+        word-break: keep-all;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .fade-in-slider .title h2 {
+        font-size: 28px;
+    }
+    .fade-in-slider .title p {
+        font-size: 13px;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .fade-in-slider .scroll-bar {
+        top: 530px;
+    }
+}
