--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -447,7 +447,6 @@ strong {
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 100%;
     height: 3px;
     background: #ccc;
 }
@@ -583,6 +582,53 @@ section.board-link ul li {
 }
 
 @media screen and (max-width: 1300px) {
+    section-quotes-title-right .section-title {
+        padding-right: 30px;
+        box-sizing: border-box;
+        word-break: keep-all
+    }
+    section.list-content .max-layout-width > div {
+        padding-left: 54%;
+    }
+    section.list-content .pager {
+        font-size: 14px;
+    }
+    section.list-content .section-title {
+        margin-left: 0;
+        font-size: 32px;
+        word-break: keep-all;
+    }
+    section.list-content .section-text {
+        margin-left: 0;
+        font-size: 14px;
+        word-break: keep-all;
+    }
+    section.section-top-title-left-two .section-title {
+        padding-right: 10px;
+        word-break: keep-all;
+    }
+    section.section-top-title-left-two .section-text {
+        width: 50%;
+        word-break: keep-all;
+    }
+    section.section-top-title-left-two ul {
+        margin-left: -1%;
+    }
+    section.section-top-title-left-two .img {
+        width: 49%;
+        margin-left: 1%;
+        margin-right: 0;
+    }
+    section.section-top-title-left-two .text {
+        padding-left: 30px;
+        box-sizing: border-box;
+    }
+    table .table-middle {
+        width: 14%;
+    }
+    table .table-left, table .table-right {
+        width: 43%;
+    }
     .board-link ul {
         padding: 0 30px;
         box-sizing: border-box;
@@ -652,7 +698,79 @@ section.board-link ul li {
     }
 }
 
+@media screen and (max-width: 850px) {
+    section.list-content .section-text + .pager {
+        margin-top: 310px;
+    }
+    section.list-content {
+        padding-top: 100px;
+    }
+    section.list-content .max-layout-width > div {
+        padding-left: 0;
+        width: 100%;
+    }
+    section.list-content .max-layout-width {
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
+    section.list-content .image_box_left {
+        width: 93%;
+        height: 294px;
+        top: 310px;
+        left: 3.5%;
+    }
+}
+
 @media screen and (max-width: 768px) {
+    section.section-quotes-title-right .bg {
+        width: 100%;
+    }
+    section.section-quotes-title-right .section-text {
+        text-align: left;
+        padding: 0 30px;
+        box-sizing: border-box;
+        word-break: keep-all
+    }
+    section.section-quotes-title-right .section-text:before {
+        left: 30px;
+    }
+    section.section-quotes-title-right .max-layout-width .text > div:before {
+        left: 30px;
+    }
+    section.section-quotes-title-right .section-title {
+        padding-left: 130px;
+    }
+    section.section-quotes-title-right .image_box_right {
+        width: 100%;
+        height: 323px;
+    }
+    section.section-quotes-title-right .max-layout-width .text {
+        width: 100%;
+        padding-right: 0;
+        padding-top: 350px;
+    }
+    section.section-top-title-left-two .img {
+        background-size: cover;
+        width: 48%;
+        margin-left: 2%;
+        height: 310px;
+    }
+    body section.section-top-title-left-two .max-layout-width ul {
+        width: 100%;
+        margin-top: 30px;
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
+    section.section-top-title-left-two .section-text {
+        width: 100%;
+        margin: 0;
+        margin-top: 30px;
+    }
+    body section.section-top-title-left-two .text {
+        width: 100%;
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
     .mobile_display_none {
         display: none;
     }
@@ -681,6 +799,18 @@ section.board-link ul li {
 }
 
 @media screen and (max-width: 640px) {
+    .table-container {
+        overflow: scroll
+    }
+    section.table table {
+        width: 640px;
+    }
+    .table .table-left,.table .table-right {
+        font-size: 13px;
+    }
+    section.table .table-middle {
+        font-size: 15px;
+    }
     .section-text {
         font-size: 14px;
     }
@@ -783,7 +913,33 @@ section.board-link ul li {
     }
 }
 
+@media screen and (max-width: 474px) {
+    section.list-content .section-title {
+        font-size: 25px;
+    }
+    section.list-content .section-text, section.list-content .pager {
+        font-size: 12px;
+    }
+    section.list-content .section-text + .pager {
+        margin-top: 350px;
+    }
+}
+
 @media screen and (max-width: 414px) {
+    .table .max-layout-width h2 {
+        line-height: 1.3;
+        word-break: keep-all;
+    }
+    section.section-quotes-title-right .section-title {
+        padding-left: 50px;
+    }
+    section.section-quotes-title-right .section-title br {
+        display: none;
+    }
+    section.section-top-title-left-two .img {
+        width: 100%;
+        margin-bottom: 30px;
+    }
     body .section-top-title-left .text > div, body .section-top-title-left .bg .max-layout-width > div {
         padding: 0 30px;
     }
@@ -798,5 +954,11 @@ section.board-link ul li {
     }
     section.background-common {
         padding-bottom: 100px;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    section.list-content .image_box_left {
+        top: 350px;
     }
 }
