--- a/src/main/webapp/css/clientSubNav.css
+++ b/src/main/webapp/css/clientSubNav.css
@@ -151,6 +151,7 @@
 
 .sub-image > .max-layout-width:first-child {
     padding-left: 220px;
+    box-sizing: border-box;
 }
 .mobile-category {
     display: none;
