--- a/src/main/webapp/css/implant/ondayImplants.css
+++ b/src/main/webapp/css/implant/ondayImplants.css
@@ -578,7 +578,7 @@ body .section02 li:first-child {
     margin-top: 122px;
 }
 
-  section.board-link {
+section.board-link {
     margin-top: 125px;
 }
 
@@ -594,4 +594,78 @@ body .section02 li:first-child {
 
 .board-link .section-title {
     line-height: 1.25;
+}
+
+@media screen and (max-width: 1300px) {
+    .section02 .section-title, .section02 .section-text {
+        line-height: 1.3;
+        word-break: keep-all;
+        padding: 0 100px;
+        margin-bottom: 30px;
+    }
+    .section02 .long-arrow p:first-child {
+        background-size: contain;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .section07 {
+        margin-top: 100px;
+    }
+    .section06 .text > div {
+        padding-left: 30px;
+    }
+    section.list-content .image_box_left {
+        width: 100%;
+        left: 0;
+    }
+    .section06 .bg {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .section10 {
+        margin-top: 0;
+    }
+    .section07 p {
+        padding: 0 30px;
+        box-sizing: border-box;
+        word-break: keep-all;
+    }
+    .section07 {
+        height: auto;
+    }
+    section.list-content {
+        margin-top: -30px;
+    }
+    .section06 .text > div {
+        padding: 0;
+    }
+    section.section-top-title-right-two .max-layout-width ul {
+        top: 330px;
+    }
+    .table-container {
+        overflow: scroll;
+        box-sizing: border-box;
+        padding: 0 30px;
+    }
+    section .table-container > * {
+        width: 640px;
+    }
+    .section02 .section-title, .section02 .section-text {
+        padding: 0 30px;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    section.section-top-title-right-two .max-layout-width ul {
+        top: 350px;
+    }
+    .section07 p {
+        font-size: 14px;
+    }
+    .section07 h2 {
+        font-size: 28px;
+    }
 }
