--- a/src/main/webapp/css/implant/fullImplants.css
+++ b/src/main/webapp/css/implant/fullImplants.css
@@ -604,3 +604,131 @@ section.board-link {
 .board-link .section-title {
     line-height: 1.25;
 }
+
+@media screen and (max-width: 1300px) {
+    .section02 .text-box {
+        width: 50%;
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
+    .section02 .section-text {
+        width: 100%;
+        padding-right: 0;
+    }
+    .section03 .section-text {
+        width: 100%;
+        padding-right: 30px;
+        box-sizing: border-box;
+        word-break: keep-all;
+    }
+}
+
+@media screen and (max-width: 1028px) {
+    .section07 li {
+        height: 261px;
+        word-break: keep-all;
+        line-height: 1.1;
+    }
+}
+
+@media screen and (max-width: 780px) {
+    .section07 .img:before {
+        left: 50%;
+        margin-left: -203px;
+    }
+    .section07 ul {
+        padding: 0 30px;
+        box-sizing: border-box;
+        padding-top: 216px;
+        height: auto;
+        margin-left: 0;
+    }
+    .section07 li:first-child {
+        margin-bottom: 240px;
+    }
+    .section07 li {
+        width: 100%;
+        margin: 0;
+        margin-bottom: 100px;
+    }
+    .section04 {
+        margin-top: 100px;
+    }
+    .section03 .move-title {
+        display: none;
+    }
+    .section03 .text-box {
+        padding-left: 0;
+        padding: 0 30px;
+        box-sizing: border-box;
+        padding-top: 320px;
+    }
+    section.section-top-title-left .image_box_left {
+        top: 0;
+    }
+    .section02 .move-title {
+        display: none;
+    }
+    .section02 .img01 {
+        width: 100%;
+        height: 342px;
+    }
+    .section02 .text-box {
+        width: 100%;
+        padding-top: 412px;
+    }
+    section.section-top-title-left {
+        background: none;
+        padding-bottom: 0;
+        margin-top: 100px;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .section05 {
+        height: auto;
+    }
+    .section05 h2 {
+        font-size: 30px;
+    }
+    .section05 p {
+        font-size: 14px;
+        word-break: keep-all;
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
+    .section07 li h2 ~ p {
+        word-break: keep-all;
+        padding-right: 30px;
+    }
+}
+
+@media screen and (max-width: 440px) {
+    .section07 .img:before {
+        width: 80%;
+        box-sizing: border-box;
+        background-size: contain;
+        left: 10%;
+        margin-left: 0;
+    }
+    .section07 .section-title, .section07 .section-text {
+        padding: 0 30px;
+        box-sizing: border-box;
+        word-break: keep-all;
+    }
+    .section07 .section-text {
+        margin-top: 30px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .section07 li {
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .section07 .img:before {
+        top: -160px;
+    }
+}
